# BayesRays

./: LICENSE  README.md  pyproject.toml
bayesrays/: __init__.py
bayesrays/dataparsers/nerfbusters/: nb_dataparser.py  nerfbuster_config.py
bayesrays/dataparsers/sparse/: sparse_nerfstudio_config.py  sparse_nerfstudio_dataparser.py
bayesrays/metrics/: ause.py  image_metrics.py
bayesrays/scripts/: eval_uncertainty.py  output_uncertainty.py  render_uncertainty.py  uncertainty.py
bayesrays/scripts/viewer_uncertainty/: run_viewer_u.py
bayesrays/utils/: scale_solver.py  utils.py
